fixtures/cs-hash-01/bad/case-insensitive-algorithm.ts
import { createHash } from "crypto";

export function hashPassword(password: string) {
	return createHash("MD5").update(password).digest("hex");
}
